# vat-moss-lite

./: .gitignore  CHANGELOG.md  README.md  approach.md  justfile  prek.toml  pyproject.toml  readme.md
.github/workflows/: tests.yml  typecheck.yml
src/vat_moss_lite/: billing_address.py  declared_residence.py  errors.py  exchange_rates.py  geoip2.py  id.py  phone_number.py  rates.py
tests/: test_billing_address.py  test_declared_residence.py  test_exchange_rates.py  test_geoip2.py  test_id.py  test_phone_number.py  unittest_data.py
